PW - Fixed Jewel Border Alignment

--- a/Rhi Professional Website/mysite.css
+++ b/Rhi Professional Website/mysite.css
@@ -246,7 +246,7 @@ a {
     background-image: url("prof-images/jewels-hori.png");
     background-repeat: no-repeat;
     background-size: contain;
-    background-position: 65% 75%;
+    background-position: 60% 40%;
     transform: scaleX(-1);
 }
 
